# Patanjali-Hax

./: CMakeLists.txt  C_BaseEntity.h  Color.h  GameEvent.h  Hooks.cpp  IClientEntityList.h  IEngineClient.h  IEngineTrace.h  Others.h  README.md  VMatrix.h  firegameevent.cpp  framestage.cpp  hacks.hpp  interfaces.cpp  interfaces.hpp  main.cpp  main.hpp  netvarmanager.cpp  netvarmanager.h  offsets.cpp  offsets.h  painttraverse.cpp  skinchanger.cpp  skinchanger.h
Patanjali.xcodeproj/: project.pbxproj
Patanjali.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
